--- a/index.html
+++ b/index.html
@@ -37,29 +37,37 @@
         </div>
 
         <div class="content2-drt">
-            <h2><span>The History</span> Of Our Hotel</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quo molestiae sunt quam! Necessitatibus ab repudiandae molestiae nostrum sequi possimus quidem minus. Eos esse commodi est, dolor voluptatibus laborum et.</p>
-            <a href="./about.html" class="btn-2">Read More</a>
+            <div class="container">
+                <h2><span>The History</span> Of Our Hotel</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quo molestiae sunt quam! Necessitatibus ab repudiandae molestiae nostrum sequi possimus quidem minus. Eos esse commodi est, dolor voluptatibus laborum et.</p>
+                <a href="./about.html" class="btn-2">Read More</a>
+            </div>
         </div>
     </section>
 
     <section id="home-content-3">
-        <div class="content3-gch">
-            <i class="fa-solid fa-hotel fa-3x"></i>
-            <h3>Great Location</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+        <div class="container">
+            <div class="content3-gch">
+                <i class="fa-solid fa-hotel fa-3x"></i>
+                <h3>Great Location</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+            </div>
         </div>
 
         <div class="content3-mil bgclr">
-            <i class="fa-solid fa-utensils fa-3x"></i>
-            <h3>Free Meals</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+            <div class="container">
+                <i class="fa-solid fa-utensils fa-3x"></i>
+                <h3>Free Meals</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+            </div>
         </div>
 
         <div class="content3-drt">
-            <i class="fa-solid fa-dumbbell fa-3x"></i>
-            <h3>Fitnees Room</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+            <div class="container">
+                <i class="fa-solid fa-dumbbell fa-3x"></i>
+                <h3>Fitnees Room</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, earum recusandae facere rerum iusto officia omnis vitae dolore, mollitia ab odit aut aperiam quod! Fugit odit dicta blanditiis recusandae mollitia?</p>
+            </div>
         </div>
     </section>
 
